dist_man1_MANS=

if BUILD_DEFID
  dist_man1_MANS+=defid.1
endif

if ENABLE_QT
  dist_man1_MANS+=defi-qt.1
endif

if BUILD_DEFI_CLI
  dist_man1_MANS+=defi-cli.1
endif

if BUILD_DEFI_TX
  dist_man1_MANS+=defi-tx.1
endif

if ENABLE_WALLET
if BUILD_DEFI_WALLET
  dist_man1_MANS+=defi-wallet.1
endif
endif
