[package]
name = "ain-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12"
anyhow = "1.0"
ethereum = "0.14"
serde_json = "1.0"
hex = "0.4"
lazy_static = "1.4"
sha3 = "0.10"
sp-core = "22.0"

[build-dependencies]
ethers = "2.0"
ethers-solc = "2.0"
serde_json = "1.0"
anyhow = "1.0"
