[package]
name = "ain-cpp-imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.70"
cxx-build = "1.0"
