[package]
name = "ain-cpp-imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx.workspace = true
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow.workspace = true
cxx-build.workspace = true
