[package]
name = "ain-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
ain-cpp-imports = { path = "../ain-cpp-imports" }

evm = { version = "0.37", default-features = false, features = ["with-serde"] }
primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
log = "0.4"
rlp = "0.5.2"
libsecp256k1 = "0.7.1"
ethereum = "0.14.0"
sha3 = "0.10.6"
hex = "0.4.3"
hex-literal = "0.4"
anyhow = "1.0"
bincode = "1.3.3"
rand = "0.8.5"
keccak-hash = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
ethbloom = "0.13.0"
ethereum-types = "0.14.1"

# Trie dependencies
hash-db = "0.16.0"
sp-core = "20.0.0"
vsdb_trie_db = { version = "0.7.0", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
vsdb_core = { version = "0.55.0", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }

# Runtime dependencies
lazy_static = "1.4"
jsonrpsee-core = "0.18"
jsonrpsee-http-server = "0.15"
jsonrpsee-types = "0.18"
tokio = { version = "1.1", features = ["rt-multi-thread"] }

# Cache dependencies
lru = "0.10.0"

[dev-dependencies]
tempdir = "0.3.7"
once_cell = "1.17.1"
