[package]
name = "ain-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
ain-cpp-imports.workspace = true
ain-db.workspace = true
ain-contracts = { path = "../ain-contracts" }

evm = { workspace = true, default-features = false, features = ["with-serde", "tracing", "std"] }
evm-runtime.workspace = true
log.workspace = true
rlp.workspace = true
libsecp256k1.workspace = true
ethereum.workspace = true
sha3.workspace = true
hex.workspace = true
hex-literal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bincode.workspace = true
rand.workspace = true
keccak-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
ethbloom.workspace = true
ethereum-types.workspace = true
serde_json.workspace = true
statrs.workspace = true
rustc-hex.workspace = true
ethabi.workspace = true
parking_lot.workspace = true
spin.workspace = true
rayon.workspace = true

# Trie dependencies
hash-db.workspace = true
sp-core.workspace = true
vsdb_trie_db = { workspace = true, features = ["rocks_engine"] }
vsdb_core = { workspace = true, features = ["rocks_engine", "compress"] }

# Runtime dependencies
lazy_static.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-server.workspace = true
jsonrpsee-types.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

# Cache dependencies
lru.workspace = true

# Precompile dependencies
sp-io.workspace = true
num = { workspace = true, default-features = false, features = ["alloc"] }
ripemd = { workspace = true, default-features = false }
substrate-bn.workspace = true

# Database dependencies
rocksdb = { workspace = true, default-features = false }

[dev-dependencies]
tempdir.workspace = true
once_cell.workspace = true
