[package]
name = "ain-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ain-evm = { path = "../ain-evm" }
ain-cpp-imports = { path = "../ain-cpp-imports" }
cxx = "1.0"
env_logger = "0.10"
jsonrpsee = { version = "0.15", features = ["http-server", "macros", "http-client"] }
lazy_static = "1.4"
log = "0.4"
libsecp256k1 = "0.7.1"
num-traits = "0.2"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
tonic = "0.9"
primitive-types = "0.12.1"
ethereum = "0.14.0"
ethereum-types = "0.14.1"
hex = "0.4.3"
async-trait = "0.1.68"
rlp = "0.5.2"
serde_with = "3.0.0"

[build-dependencies]
cxx-gen = "0.7"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "2.0", default-features = false, features = ["parsing", "printing"] }
prost-build = "0.11"
tonic-build = "0.9"
prettyplease = "0.2.4"
anyhow = "1.0.70"
