[package]
name = "ain-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ain-evm = { path = "../ain-evm" }
ain-cpp-imports = { path = "../ain-cpp-imports" }
cxx.workspace = true
env_logger.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros", "http-client"] }
jsonrpsee-server.workspace = true
lazy_static.workspace = true
log.workspace = true
libsecp256k1.workspace = true
num-traits.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic.workspace = true
ethereum.workspace = true
ethereum-types.workspace = true
hex.workspace = true
async-trait.workspace = true
rlp.workspace = true
sha3.workspace = true
serde_with.workspace = true
anyhow.workspace = true

[build-dependencies]
cxx-gen.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn = { workspace = true, default-features = false, features = ["parsing", "printing"] }
prost-build.workspace = true
tonic-build.workspace = true
prettyplease.workspace = true
anyhow.workspace = true
