[package]
name = "ain-ocean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.test]
debug = true

[dependencies]
axum.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true
dftx-rs.workspace = true
bitcoin.workspace = true
tarpc = { version = "0.33", features = ["tokio1", "serde1", "serde-transport","tcp"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
json = "0.12.4"
tokio-serde = {version="0.8.0"}
futures = "0.3.29"
jsonrpsee =  { version = "0.20.3", features = ["server", "macros", "http-client", "jsonrpsee-server"] }
rocksdb = "0.21.0"
ctrlc = "3.1.9"
tempdir = "0.3.7"
bitcoin_hashes = "0.12.0"
structopt = { version = "0.3", default-features = false }
tempfile = "3.8.1"
anyhow.workspace = true
log = "0.4.20"