[package]
name = "ain-ocean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.test]
debug = true

[dependencies]
ain-cpp-imports.workspace = true
ain-db.workspace = true
ain-macros.workspace = true

axum.workspace = true
hyper.workspace = true
keccak-hash.workspace = true
log.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
hex.workspace = true
ain-dftx.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
serde_json = "1.0"
json = "0.12.4"
futures = "0.3.29"
jsonrpsee.workspace = true
rocksdb.workspace = true
anyhow.workspace = true
cached.workspace = true
lazy_static.workspace = true
bincode.workspace = true
defichain-rpc.workspace = true
jsonrpc-async = "2.0.2"
serde_urlencoded = "0.7"
env_logger.workspace = true
rust_decimal = { version = "1.34", features = ["serde", "serde-float", "serde-with-str"] }
rust_decimal_macros = "1.34"
clap = { version = "4.5.0", features = ["derive"] }
num_cpus.workspace = true

[dev-dependencies]
tempdir.workspace = true
tempfile = "3.8.1"
chrono = "0.4.31"
