[package]
name = "ain-rs-exports"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ain-evm = { path = "../ain-evm" }
ain-grpc = { path = "../ain-grpc" }
ain-contracts = { path = "../ain-contracts" }
ain-macros = { path = "../ain-macros" }
ain-cpp-imports = { path = "../ain-cpp-imports" }

ethereum.workspace = true
rlp.workspace = true
ethereum-types.workspace = true
log.workspace = true
hex.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ethabi.workspace = true

# Build
cxx.workspace = true

[build-dependencies]
cxx-gen.workspace = true
proc-macro2.workspace = true
