[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12.1"
anyhow = "1.0"
ethereum = "0.14.0"
serde_json = "1.0.96"
hex = "0.4.3"
lazy_static = "1.4"

[build-dependencies]
ethers = "2.0.7"
ethers-solc = "2.0.7"
serde_json = "1.0"
anyhow = "1.0"
