[package]
name = "exp-ain-grpc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.9"
fake = "2.5"
rand = "0.8"
anyhow = "1.0.70"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.9"
anyhow = "1.0.70"
protobuf-src = "1.1.0"
