[package]
name = "ain-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
env_logger = "0.9"
jsonrpsee-core = "0.15"
jsonrpsee-http-client = { version = "0.15", default-features = false }
jsonrpsee-http-server = "0.15"
jsonrpsee-types = "0.15"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
tonic = "0.8"

[build-dependencies]
cxx-gen = "0.7"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "1.0", features = ["full"] }
prost-build = "0.11"
tonic-build = "0.8"
