[package]
name = "defi-rpc"
version = "0.1.0"
edition = "2018"
authors = [
    "DeFi Blockchain Developers <engineering@defichain.com>"
]
description = "DeFichain JSON-RPC client"

[dependencies]
jsonrpc = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.33"
anyhow = "1.0.44"