[package]
name = "test-loan-cli"
version = "0.1.0"
edition = "2018"
authors = [
    "DeFi Blockchain Developers <engineering@defichain.com>"
]
description = "DeFichain decantralized loans helper CLI"

[dependencies]
defi-rpc = { path = '../rpc-client' }
serde_json = "1"
anyhow = "1.0.44"
structopt = "0.3"